# 22

./: .gitignore  catalog.json  pyproject.toml  requirements.txt
blog/: admin.py  models.py  urls.py  views.py
blog/migrations/: 0001_initial.py
blog/templates/blog/: base.html  post_confirm_delete.html  post_detail.html  post_form.html  post_list.html
blog/templates/blog/includes/: inc_menu.html
catalog/: admin.py  models.py  urls.py  views.py
catalog/migrations/: 0001_initial.py  0002_alter_product_options_alter_category_description.py
catalog/static/js/: bootstrap.bundle_min.js
catalog/templates/: base.html  contacts.html  home.html  products_det.html  products_list.html
catalog/templates/catalog/: contacts.html  home.html  product_detail.html  product_list.html
catalog/templates/includes/: inc_menu.html
catalog/templatetags/: my_tags.py  tags_my.py
config/: settings.py  urls.py
newapp/: urls.py  views.py
newapp/templates/newapp/: contacts.html
static/js/: bootstrap.bundle.min.js
