[tool.poetry]
name = "22"
version = "0.1.0"
description = ""
authors = ["another <kirill.grigk37@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.4"
psycopg2-binary = "^2.9.10"
black = "^24.10.0"
pillow = "^11.0.0"
load-dotenv = "^0.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
